# operra

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.claude/: settings.local.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.github/workflows/: deploy.yml
src-tauri/capabilities/: default.json
src-tauri/infrastructure/: main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: claude.rs  mod.rs
src-tauri/src/commands/: deploy_commands.rs  mod.rs  monitoring_commands.rs  plan_commands.rs  project_commands.rs  questionnaire_commands.rs  scan_commands.rs  tools_commands.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/models/: adapter_log.rs  aws_connection.rs  deployment.rs  mod.rs  plan.rs  plan_message.rs  plan_option.rs  project.rs  questionnaire.rs  scan.rs
src-tauri/src/provisioning/: mod.rs  templates.rs
src-tauri/src/scanner/: autofill.rs  detectors.rs  mod.rs  types.rs
src-tauri/src/tools/: aws.rs  aws_resources.rs  dependency_check.rs  mod.rs  tofu.rs
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/components/projects/: ProjectCard.tsx  ProjectForm.tsx
src/hooks/: useMonitoring.ts  usePlan.ts  useProjects.ts  useQuestionnaire.ts  useScan.ts
src/lib/: tauri.ts  types.ts
src/pages/: MonitoringPage.tsx  NewProjectPage.tsx  PlanViewPage.tsx  ProjectDetailPage.tsx  ProjectListPage.tsx  ProjectSettingsPage.tsx  QuestionnairePage.tsx  ScanResultsPage.tsx  SetupPage.tsx
src/styles/: globals.css
(+2 files in other folders)
